fix: align headers to left

--- a/packages/components/table/src/styles/index.module.scss
+++ b/packages/components/table/src/styles/index.module.scss
@@ -44,6 +44,10 @@
 
   width: 100%;
 
+  thead th {
+    text-align: start;
+  }
+
   td,
   th {
     padding: get-spacing();
